# BadApple

./: .gitignore  CMakeLists.txt  README.md  badapple.cpp  configurable_player.cpp  jump_box.cpp  main.cpp  matrix.cpp  release_embedded.cpp  shell-windows.nix  shell.nix  testMatrix.cpp  test_video_string.cpp  video.cpp
.github/workflows/: windows-release.yml  windows.yml
assets/: resources.qrc
include/: matrix.hpp  video.hpp
src/: matrix.cpp  video.cpp
toolchains/: mingw-w64.cmake
tools/: generate_embedded_cache.cpp
